--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Siddhartha Kanugu">Siddhartha Kanugu</h1>
 
-          <p class="title">Student Lucky</p>
+          <p class="title">Student</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
